Correct some findbug warnings, implement Randal's comment